# t-SNE-Analysis

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
.github/workflows/: build.yml
Common/: AdvancedTsneSettings.cpp  AdvancedTsneSettingsAction.cpp  AdvancedTsneSettingsAction.h  CMakeLists.txt  DimensionSelectionAction.cpp  DimensionSelectionAction.h  DimensionSelectionHolder.cpp  DimensionSelectionWidget.cpp  GeneralHsneSettingsAction.cpp  GeneralSettingsWidget.cpp  GeneralSettingsWidget.h  GeneralTsneSettings.cpp  GeneralTsneSettingsAction.cpp  GeneralTsneSettingsAction.h  GradientDescentSettingsAction.cpp  GradientDescentSettingsAction.h  HsneSettingsAction.cpp  KnnParameters.h  KnnSettingsAction.cpp  KnnSettingsAction.h  OffscreenBuffer.cpp  TsneAnalysis.cpp  TsneAnalysis.h  TsneComputationAction.cpp  TsneComputationAction.h  TsneData.h  TsneOptions.h  TsneParameters.h  TsneSettingsAction.cpp  TsneSettingsAction.h
HSNE/: HsneAnalysis.cpp  HsneAnalysisOld.cpp  HsneSettingsWidget.h
HSNE/src/: AdvancedHsneSettingsAction.cpp  AdvancedHsneSettingsAction.h  CMakeLists.txt  GeneralHsneSettingsAction.cpp  GeneralHsneSettingsAction.h  HierarchyConstructionSettingsAction.cpp  HierarchyConstructionSettingsAction.h  HsneAnalysis.cpp  HsneAnalysis.h  HsneAnalysisOld.h  HsneAnalysisPlugin.cpp  HsneAnalysisPlugin.h  HsneAnalysisPlugin.json  HsneHierarchy.cpp  HsneHierarchy.h  HsneParameters.cpp  HsneParameters.h  HsneScaleAction.cpp  HsneScaleAction.h  HsneSettingsAction.cpp  HsneSettingsAction.h  HsneSettingsWidget.cpp  HsneSettingsWidget.h
cmake/: CMakeCommon.cmake  CMakeHsneProject.cmake  CMakeLinkUtilities.cmake  CMakeSetOptimizationLevel.cmake  CMakeTsneProject.cmake  ConanSetup.cmake  InstallArtifactoryPackage.cmake  README_AQL.md  aql.json.in  aql_multi.json.in  aql_single.json.in
lib/Flann/Win/Debug/: flann_cpp_s.lib  lz4_s.lib
lib/Flann/Win/Release/: flann_cpp_s.lib  lz4_s.lib
lib/Flann/Win/include/: lz4.h  lz4frame.h
lib/HDI/Win/Release/: hdidata.lib  hdiutils.lib
lib/HDI/include/hdi/data/: cluster.h  embedding.h  embedding_inl.h  flow_model.h  flow_model_inl.h  histogram.h  histogram_inl.h  io.h  map_helpers.h  map_mem_eff.h  nano_flann.h  set_intersection_tree.h  shader.h  vptree.h
lib/HDI/include/hdi/dimensionality_reduction/: abstract_gradient_descent_tsne.h  evaluation.h  evaluation_inl.h  gradient_descent_tsne_2d.h  gradient_descent_tsne_3d.h  gradient_descent_tsne_texture.h  gradient_descent_tsne_texture_inl.h  hd_joint_probability_generator.h  hd_joint_probability_generator_inl.h  hierarchical_sne.h  hierarchical_sne_inl.h  sparse_tsne_user_def_probabilities_inl.h  sptree.h  sptree_inl.h  tsne_parameters.h  weighted_sptree.h  weighted_sptree_inl.h
lib/HDI/include/hdi/dimensionality_reduction/gpgpu_sne/: 2d_density_field_computation.h  2d_density_field_shaders.h  2d_density_tree_computation.h  2d_density_tree_shaders.h  2d_field_computation.h  2d_field_shaders.h  2d_gpgpu_sne_compute.h  2d_gpgpu_sne_shaders.h  2d_utils.h  3d_field_computation.h  3d_field_shaders.h  3d_gpgpu_sne_compute.h  3d_gpgpu_sne_shaders.h  3d_utils.h  compute_shaders.glsl  compute_shaders.h  depth_field_computation.h  depth_field_shaders.h  field_computation.h  gpgpu_sne_compute.h  gpgpu_sne_raster.h  gpgpu_utils.h  raster_shaders.glsl
lib/HDI/include/hdi/utils/: dataset_utils.h  file_utils.h  glad.h  memory_utils.h  scoped_timers.h  scoped_timers_inl.h  vector_utils.h  visual_utils.h  visual_utils_inl.h
lib/HDI/include/hdi/utils/glad/: glad.h
lib/HDI/macOS/include/hdi/data/: pixel_data.h
lib/HDI/macOS/include/hdi/dimensionality_reduction/: hd_joint_probability_generator.h  hd_joint_probability_generator_inl.h  hierarchical_sne.h  hierarchical_sne_inl.h  sparse_tsne_user_def_probabilities_inl.h
lib/HDI/macOS/include/hdi/utils/: math_utils_inl.h
src/: DimensionSelectionHolder.cpp  DimensionSelectionHolder.h  DimensionSelectionItemModel.cpp  DimensionSelectionItemModel.h  DimensionSelectionProxyModel.cpp  DimensionSelectionProxyModel.h  DimensionSelectionWidget.cpp  DimensionSelectionWidget.h  GeneralSettingsWidget.cpp  GeneralSettingsWidget.h  HsneAnalysis.cpp  HsneAnalysis.h  TsneAnalysis.cpp  TsneAnalysis.h  TsneAnalysisPlugin.cpp  TsneAnalysisPlugin.h  TsneSettingsWidget.cpp  TsneSettingsWidget.h
src/Common/: CMakeLists.txt  GradientDescentSettingsAction.cpp  GradientDescentSettingsAction.h  OffscreenBuffer.cpp  OffscreenBuffer.h  TsneAnalysis.cpp  TsneAnalysis.h  TsneComputationAction.cpp  TsneComputationAction.h  TsneParameters.h
src/HSNE/: CMakeLists.txt  GeneralHsneSettingsAction.cpp  GeneralHsneSettingsAction.h  Globals.h  HSNEUtilities.cpp  HierarchyConstructionSettingsAction.cpp  HsneAnalysisPlugin.cpp  HsneAnalysisPlugin.h  HsneAnalysisPlugin.json  HsneHierarchy.cpp  HsneHierarchy.h  HsneRecomputeWarningDialog.h  HsneScaleAction.cpp  HsneScaleAction.h  HsneSettingsAction.cpp  HsneSettingsAction.h  HsneUtilities.cpp  HsneUtilities.h  PluginInfo.json
src/tSNE/: CMakeLists.txt  GeneralTsneSettingsAction.cpp  GeneralTsneSettingsAction.h  InitTsneSettings.cpp  InitTsneSettings.h  PluginInfo.json  TsneAnalysisPlugin.cpp  TsneAnalysisPlugin.h  TsneAnalysisPlugin.json  TsneSettingsAction.cpp  TsneSettingsAction.h
tSNE/: CMakeLists.txt
tSNE/lib/HDI/include/hdi/data/: voxel_data.h
tSNE/lib/HDI/include/hdi/dimensionality_reduction/: hd_joint_probability_generator.h  hierarchical_sne.h  knn_utils.h  sparse_tsne_user_def_probabilities.h  sparse_tsne_user_def_probabilities_inl.h  tsne_inl.h  tsne_random_walks_inl.h  wtsne_inl.h
tSNE/src/: AdvancedSettingsAction.cpp  AdvancedSettingsAction.h  CMakeLists.txt  DimensionSelectionAction.cpp  DimensionsSettingsAction.cpp  DimensionsSettingsAction.h  GeneralSettingsAction.cpp  GeneralSettingsAction.h  GeneralTsneSettingsAction.cpp  GeneralTsneSettingsAction.h  SettingsAction.cpp  SettingsAction.h  TsneAnalysis.cpp  TsneAnalysis.h  TsneAnalysisPlugin.cpp  TsneAnalysisPlugin.h  TsneSettingsAction.cpp  TsneSettingsAction.h  TsneSettingsWidget.cpp  TsneSettingsWidget.h
ui/: DimensionSelectionWidget.ui
